environments/operations/mw-headless-browser/patch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-headless
  namespace: services
spec:
  template:
    spec:
      containers:
        - name: service-headless
          image: gitlab.xxx.xx:5050/service-headless-browser/service-headless-browser:latest
          resources:
            limits:
              cpu: "2"
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 1Gi
