environments/operations/mw-headless-browser/http_route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service-headless-http
  namespace: services
spec:
  parentRefs:
  - name: traefik
    sectionName: http
    namespace: kube-system
    kind: Gateway
  hostnames:
  - service-headless.ops.xxx.xx
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service-headless-https
  namespace: services
  labels:
    gateway: traefik
spec:
  parentRefs:
  - name: traefik
    sectionName: https
    namespace: kube-system
    kind: Gateway
  hostnames:
  - service-headless.ops.xxx.xx
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: service-headless
      namespace: services
      port: 8080  
    filters: 
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: headless-header
